tree-sitter-karn/grammar.js
    source_file: ($) =>
      choice(
        repeat1(choice($.commons_decl, $.context_decl, $.test_decl)),
        repeat1($._item_fragment),
        $._expr_fragment,
      ),

    _item_fragment: ($) =>
      choice($._context_body_item, $.handler, $.state_decl, $.key_decl),

    // The body of a fragment block: statements then an optional tail value,
    // mirroring `block` so multi-statement and bare-expression snippets parse.
    // Spelled as a non-empty choice so the rule never matches the empty input.
    _expr_fragment: ($) =>
      choice(
        seq(repeat1($._statement), optional(field("tail", $._expression))),
        field("tail", $._expression),
      ),

    commons_decl: ($) =>
      seq(
        "commons",
        field("name", $.qualified_name),
        choice(
          seq("{", repeat($._commons_body_item), "}"),
          // Fragment form: header followed by items to EOF (or the next
          // top-level header).
          repeat($._commons_body_item),
        ),
      ),

    context_decl: ($) =>
      seq(
        "context",
        field("name", $.qualified_name),
        choice(
          seq("{", repeat($._context_body_item), "}"),
          repeat($._context_body_item),
        ),
      ),

    // v0.7: test unit targeting a commons or context. Brace or fragment form
    // (a test case is `test "string" …`, so it never collides with a new
    // `test <qualified_name>` unit — but the disambiguation needs one extra
    // token of lookahead, handled by a declared conflict).
    test_decl: ($) =>
      prec.right(
        seq(
          "test",
          field("target", $.qualified_name),
          choice(
            seq("{", repeat($._test_body_item), "}"),
            repeat($._test_body_item),
          ),
        ),
      ),

    qualified_name: ($) => sep1($.identifier, "."),

    _commons_body_item: ($) =>
      choice(
        $.uses_decl,
        $.type_decl,
        $.fn_decl,
        // Permissive: capability/service/etc. can syntactically appear
        // anywhere — the LSP reports semantic placement errors.
        $.capability_decl,
        $.provider_decl,
        $.service_decl,
        $.agent_decl,
      ),

    _context_body_item: ($) =>
      choice(
        $.uses_decl,
        $.consumes_decl,
        $.exports_decl,
        $.type_decl,
        $.fn_decl,
        $.capability_decl,
        $.provider_decl,
        $.service_decl,
        $.agent_decl,
      ),

    _test_body_item: ($) =>
      choice($.uses_decl, $.consumes_decl, $.mocks_decl, $.test_case),

    // -- Headers / clauses --

    uses_decl: ($) => seq("uses", field("target", $.qualified_name)),
    consumes_decl: ($) =>
      seq(
        "consumes",
        field("target", $.qualified_name),
        // v0.4: `consumes a.b as Alias`.
        optional(seq("as", field("alias", $.identifier))),
      ),
    exports_decl: ($) =>
      seq(
        "exports",
        field("visibility", choice("opaque", "transparent")),
        "{",
        optional(sep1(field("name", $.identifier), ",")),
        optional(","),
        "}",
      ),

    // -- Type declarations --

    type_decl: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        "=",
        field("body", $._type_body),
      ),

    _type_body: ($) =>
      choice(
        $.opaque_type,
        $.refined_type,
        $.record_type,
        $.sum_type,
        $.enum_type,
      ),

    opaque_type: ($) =>
      seq(
        "opaque",
        field("base", $._base_type),
        optional(seq("where", field("refinement", $.refinement))),
      ),

    refined_type: ($) =>
      prec(
        1,
        seq(
          field("base", $._base_type),
          optional(seq("where", field("refinement", $.refinement))),
        ),
      ),

    record_type: ($) =>
      seq(
        "{",
        optional(sep1($.record_field, ",")),
        optional(","),
        "}",
      ),

    record_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
        optional(seq("where", field("refinement", $.refinement))),
        // v0.11: an optional initial-value expression. Meaningful on agent
        // `state` fields; the checker restricts where it applies.
        optional(seq("=", field("init", $._expression))),
      ),

    sum_type: ($) => prec.right(repeat1($.sum_variant)),
    sum_variant: ($) =>
      seq(
        "|",
        field("name", $.constant_name),
        optional(
          seq(
            "(",
            optional(sep1($.variant_payload_field, ",")),
            optional(","),
            ")",
          ),
        ),
      ),
    variant_payload_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
      ),

    refinement: ($) => sep1($._refinement_pred, "and"),
    _refinement_pred: ($) =>
      choice(
        $.pred_call,
        $.pred_atom,
      ),
    pred_atom: ($) => $.predicate_name,
    predicate_name: ($) =>
      choice(
        "Matches",
        "InRange",
        "MinLength",
        "MaxLength",
        "Length",
        "NonNegative",
        "Positive",
        "NonEmpty",
      ),
    _base_type: ($) => $.base_type,
    base_type: () => choice("Int", "String", "Bool"),

    _type_ref: ($) =>
      choice(
        $._base_type,
        $.unit_type,
        $.validation_error_type,
        $.generic_type_ref,
        $.identifier,
      ),

    unit_type: () => seq("(", ")"),
    validation_error_type: () => "ValidationError",
    generic_type_ref: ($) =>
      seq(
        field(
          "name",
          choice(
            alias("Result", $.builtin_type),
            alias("Option", $.builtin_type),
            alias("Effect", $.builtin_type),
            // v0.9: HTTP result type.
            alias("HttpResult", $.builtin_type),
          ),
        ),
        "[",
        sep1(field("arg", $._type_ref), ","),
        "]",
      ),

    // -- Function declarations --

    fn_decl: ($) =>
      seq(
        "fn",
        field("name", choice($.method_name, $.identifier)),
        "(",
        optional($._params),
        ")",
        "->",
        field("return_type", $._type_ref),
        field("body", $.block),
      ),
    _params: ($) =>
      seq(
        choice($.self_param, $.param),
        repeat(seq(",", $.param)),
        optional(","),
      ),
    param: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_ref),
      ),

    // -- v0.5: capabilities, providers, services, agents --

    capability_decl: ($) =>
      seq(
        "capability",
        field("name", $.identifier),
        "{",
        repeat($.capability_op),
        "}",
      ),
    capability_op: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
      ),

    provider_decl: ($) =>
      seq(
        "provides",
        field("capability", $.identifier),
        "=",
        field("provider", $.identifier),
        "{",
        repeat($.provider_op),
        "}",
      ),
    provider_op: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        field("body", $.block),
      ),

    service_decl: ($) =>
      seq(
        "service",
        field("name", $.identifier),
        "{",
        repeat($.handler),
        "}",
      ),

    agent_decl: ($) =>
      seq(
        "agent",
        field("name", $.identifier),
        "{",
        field("key", $.key_decl),
        field("state", $.state_decl),
        repeat($.handler),
        "}",
      ),
    key_decl: ($) =>
      seq("key", field("name", $.identifier), ":", field("type", $._type_ref)),
    state_decl: ($) =>
      seq(
        "state",
        "{",
        optional(sep1($.record_field, ",")),
        optional(","),
        "}",
      ),

    // v0.5 `on call`, v0.9 `on http METHOD "path"`, v0.10a `on cron "expr"`,
    // and v0.10b `on queue "name"` handlers.
    handler: ($) =>
      choice($.call_handler, $.http_handler, $.cron_handler, $.queue_handler),
    http_handler: ($) =>
      seq(
        "on",
        "http",
        field("method", $.http_method),
        field("path", $.string_literal),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    http_method: () => choice("GET", "POST", "PUT", "PATCH", "DELETE"),
    // v0.10a: `on cron "<expr>" (at: Int?) -> Effect[Result[(), E]] { … }`.
    // The schedule sits bare after `cron`, mirroring `on http`'s bare path.
    cron_handler: ($) =>
      seq(
        "on",
        "cron",
        field("schedule", $.string_literal),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    // v0.10b: `on queue "<name>" (message: T) -> Effect[Result[(), E]] { … }`.
    queue_handler: ($) =>
      seq(
        "on",
        "queue",
        field("name", $.string_literal),
        "(",
        optional(sep1($.param, ",")),
        optional(","),
        ")",
        "->",
        field("return_type", $._type_ref),
        optional(field("given", $.given_clause)),
        field("body", $.block),
      ),
    given_clause: ($) =>
      seq("given", sep1(field("capability", $.identifier), ",")),

    // -- v0.7: test bodies --

    mocks_decl: ($) =>
      seq(
        "mocks",
        field("capability", $.identifier),
        "=",
        field("impl", $.identifier),
        "{",
        repeat($.provider_op),
        "}",
      ),
    test_case: ($) =>
      seq("test", field("name", $.string_literal), field("body", $.block)),

    // -- Block & statements --

    // A block is a run of statements ending in a tail expression (the block's
    // value). The tail is optional because a test body may end in a statement
    // such as a bare `assert`.
    block: ($) =>
      seq("{", repeat($._statement), optional(field("tail", $._expression)), "}"),

    // `assert` is an expression (v0.9.1) but also appears in statement
    // position within a test body (an expression-statement of type `()`).
    _statement: ($) =>
      choice($.let_stmt, $.effect_let_stmt, $.commit_stmt, prec(1, $.assert_expr)),

    let_stmt: ($) =>
      seq(
        "let",
        field("name", $._binding_name),
        optional(seq(":", field("type", $._type_ref))),
        "=",
        field("value", $._expression),
      ),
    effect_let_stmt: ($) =>
      seq(
        "let",
        field("name", $._binding_name),
        optional(seq(":", field("type", $._type_ref))),
        "<-",
        field("value", $._expression),
      ),
    commit_stmt: ($) => seq("commit", field("value", $._expression)),

    // A let/effect-let may bind the discard name `_`.
    _binding_name: ($) => choice($.identifier, alias("_", $.wildcard)),

    // -- Expressions --

    _expression: ($) =>
      choice(
        $.if_expr,
        $.match_expr,
        $.is_expr,
        $.assert_expr,
        $.binary_expr,
        $.unary_expr,
        $._primary,
      ),

    // v0.9.1: `assert` is an expression of type `()`.
    assert_expr: ($) =>
      prec.right(PREC.assert, seq("assert", field("cond", $._expression))),

    if_expr: ($) =>
      seq(
        "if",
        field("cond", $._expression),
        field("then", $.block),
        "else",
        field("else", choice($.if_expr, $.block)),
      ),

    match_expr: ($) =>
      seq(
        "match",
        field("disc", $._expression),
        "{",
        repeat($.match_arm),
        "}",
      ),
    // Arms are newline-separated; a trailing comma is permitted but not
    // required.
    match_arm: ($) =>
      prec.right(
        seq(
          field("pattern", $._pattern),
          "=>",
          // `_expression` already includes `block` via `_primary`, so a
          // `{ … }` arm body is covered without a separate alternative.
          field("body", $._expression),
          optional(","),
        ),
      ),

    _pattern: ($) => choice($.wildcard_pattern, $.variant_pattern),
    variant_pattern: ($) =>
      prec.right(
        seq(
          optional(seq(field("type", $.identifier), ".")),
          field("variant", $.identifier),
          optional(
            seq(
              "(",
              optional(sep1($._pattern_binding, ",")),
              optional(","),
              ")",
            ),
          ),
        ),
      ),
    _pattern_binding: ($) =>
      choice(
        $.named_binding,
        $.positional_binding,
      ),
    positional_binding: ($) => choice($.identifier, "_"),

    is_expr: ($) =>
      prec.left(
        PREC.is,
        seq(field("value", $._expression), "is", field("pattern", $._pattern)),
      ),

    binary_expr: ($) =>
      choice(
        prec.left(PREC.or, seq($._expression, "||", $._expression)),
        prec.left(PREC.and, seq($._expression, "&&", $._expression)),
        prec.left(PREC.cmp, seq($._expression, choice("==", "!="), $._expression)),
        prec.left(
          PREC.rel,
          seq($._expression, choice("<", "<=", ">", ">="), $._expression),
        ),
        prec.left(PREC.add, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.mul, seq($._expression, choice("*", "/"), $._expression)),
      ),

    _primary: ($) =>
      choice(
        $.paren_expr,
        $.method_call,
        $.field_access,
        $.call,
        $.record_construction,
        $.record_spread,
        $.question_expr,
        $.ok_expr,
        $.err_expr,
        $.some_expr,
        $.none_expr,
        $.effect_pure_expr,
        $.mock_expr,
        $.block,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.unit_literal,
        $.self_expr,
        $.identifier,
      ),

    method_call: ($) =>
      prec.left(
        PREC.postfix + 1,
        seq(
          field("receiver", $._primary),
          ".",
          field("method", $.identifier),
          "(",
          optional(sep1(field("arg", $._expression), ",")),
          optional(","),
          ")",
        ),
      ),

    field_access: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("receiver", $._primary), ".", field("field", $.identifier)),
      ),

    field_init: ($) =>
      choice(
        seq(field("name", $.identifier), ":", field("value", $._expression)),
        field("shorthand", $.identifier),
      ),

    record_spread: ($) =>
      choice(
        seq(
          field("type", $.identifier),
          "{",
          "...",
          field("base", $._expression),
          repeat(seq(",", $.field_init)),
          optional(","),
          "}",
        ),
        seq(
          "{",
          "...",
          field("base", $._expression),
          repeat(seq(",", $.field_init)),
          optional(","),
          "}",
        ),
      ),

    question_expr: ($) =>
      prec.left(PREC.postfix, seq($._expression, "?")),

    ok_expr: ($) => seq("Ok", "(", $._expression, ")"),
    self_expr: () => "self",

    // -- Tokens --

    identifier: () => /[A-Za-z][A-Za-z0-9_]*/,

    // Constant-style names (capitalised idents used as variant names).
    // Tree-sitter cannot enforce capitalisation at the lex level without
    // overshadowing `identifier`; we use a regex.
    constant_name: () => /[A-Z][A-Za-z0-9_]*/,

    number_literal: () => /[0-9]+/,
    boolean_literal: () => choice("true", "false"),
