tree-sitter-karn/test/corpus/v0.1.txt
==========================
let statement and if-else
==========================

commons sample {
	fn classify(n: Int) -> String {
		let label = if n > 0 { "pos" } else { "zero" }
		label
	}
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier))
    (fn_decl
      name: (identifier)
      (param name: (identifier) type: "Int")
      return_type: (identifier)
      body: (block
        (let_stmt
          name: (identifier)
          value: (if_expr
            cond: (binary_expr (identifier) (number_literal))
            then: (block tail: (string_literal))
            else: (block tail: (string_literal))))
        tail: (identifier)))))

==========================
result type and question propagation
==========================

commons demo {
	fn f(n: Int) -> Result[Int, ValidationError] {
		let x = Ok(n)?
		Ok(x)
	}
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier))
    (fn_decl
      name: (identifier)
      (param name: (identifier) type: "Int")
      return_type: (generic_type_ref
        name: (builtin_type)
        arg: "Int"
        arg: (validation_error_type))
      body: (block
        (let_stmt
          name: (identifier)
          value: (question_expr (ok_expr (identifier))))
        tail: (ok_expr (identifier))))))
