tree-sitter-karn/test/corpus/v0.10.txt
================================================================================
on cron handler
================================================================================

context reaper

service sweeper {
  on cron "*/5 * * * *" () -> Effect[Result[(), String]] {
    Ok(())
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (handler
        (cron_handler
          (string_literal)
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (unit_type)
              (base_type)))
          (block
            (ok_expr
              (unit_literal))))))))

================================================================================
on cron handler with scheduled-time param and given
================================================================================

context metrics

service ticker {
  on cron "0 * * * *" (at: Int) -> Effect[Result[(), String]] given Pinger {
    Ok(())
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (handler
        (cron_handler
          (string_literal)
          (param
            (identifier)
            (base_type))
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (unit_type)
              (base_type)))
          (given_clause
            (identifier))
          (block
            (ok_expr
              (unit_literal))))))))

================================================================================
on queue handler
================================================================================

context mailer

service outbox {
  on queue "outbound-email" (message: EmailJob) -> Effect[Result[(), String]] {
    Ok(())
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (handler
        (queue_handler
          (string_literal)
          (param
            (identifier)
            (identifier))
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (unit_type)
              (base_type)))
          (block
            (ok_expr
              (unit_literal))))))))
