tree-sitter-karn/test/corpus/v0.2.txt
==========================
record type and field access
==========================

commons geom {
	type Pt = { x: Int, y: Int }
	fn xOf(p: Pt) -> Int { p.x }
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier))
    (type_decl
      name: (identifier)
      body: (record_type
        (record_field name: (identifier) type: "Int")
        (record_field name: (identifier) type: "Int")))
    (fn_decl
      name: (identifier)
      (param name: (identifier) type: (identifier))
      return_type: "Int"
      body: (block tail: (field_access receiver: (identifier) field: (identifier))))))

==========================
sum type pipe form
==========================

commons orders {
	type Order =
		| Pending
		| Placed(id: Int)
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier))
    (type_decl
      name: (identifier)
      body: (sum_type
        (sum_variant name: (constant_name))
        (sum_variant
          name: (constant_name)
          (variant_payload_field name: (identifier) type: "Int"))))))

==========================
match expression
==========================

commons logic {
	type T = | A | B
	fn isA(t: T) -> Bool {
		match t {
			A => true,
			B => false,
		}
	}
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier))
    (type_decl
      name: (identifier)
      body: (sum_type
        (sum_variant name: (constant_name))
        (sum_variant name: (constant_name))))
    (fn_decl
      name: (identifier)
      (param name: (identifier) type: (identifier))
      return_type: "Bool"
      body: (block
        tail: (match_expr
          disc: (identifier)
          (match_arm pattern: (variant_pattern variant: (constant_name)) body: (boolean_literal))
          (match_arm pattern: (variant_pattern variant: (constant_name)) body: (boolean_literal)))))))
