tree-sitter-karn/test/corpus/v0.3.txt
==========================
opaque type
==========================

commons commerce.money {
	type Money = opaque Int where NonNegative
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier) (identifier))
    (type_decl
      name: (identifier)
      body: (opaque_type
        base: "Int"
        refinement: (refinement
          (pred_atom (predicate_name)))))))

==========================
doc block attached to type
==========================

commons units {
	---
	A length in metres.
	---
	type Metres = Int where NonNegative
}

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier))
    (doc_block)
    (type_decl
      name: (identifier)
      body: (refined_type
        base: "Int"
        refinement: (refinement (pred_atom (predicate_name)))))))

==========================
uses clause and fragment-form commons
==========================

commons app.api

uses fitness.units

type Tag = String where NonEmpty

--------------------------

(source_file
  (commons_decl
    name: (qualified_name (identifier) (identifier))
    (uses_decl target: (qualified_name (identifier) (identifier)))
    (type_decl
      name: (identifier)
      body: (refined_type
        base: "String"
        refinement: (refinement (pred_atom (predicate_name)))))))
