tree-sitter-karn/test/corpus/v0.45.txt
================================================================================
v0.45: actor declarations
================================================================================

context demo {
  actor Visitor { auth = None }
  actor Principal { auth = Internal, identity = Token }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (actor_decl
      (identifier)
      (scheme))
    (actor_decl
      (identifier)
      (scheme)
      (identifier))))

================================================================================
v0.45: handler by clause
================================================================================

context demo {
  service api from http {
    on GET("/health") by v: Visitor () -> Effect[HttpResult[String]] { Ok("ok") }
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (service_protocol)
      (handler
        (http_handler
          (http_method)
          (string_literal)
          (by_clause
            (identifier)
            (identifier))
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (base_type)))
          (block
            (ok_expr
              (string_literal))))))))

================================================================================
v0.47: bearer actor with secret config
================================================================================

context demo {
  actor User { auth = Bearer(secret = "JWT_KEY"), identity = UserId }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (actor_decl
      (identifier)
      (scheme)
      (string_literal)
      (identifier))))

================================================================================
v0.50: binder-less by clause
================================================================================

context demo {
  service api from http {
    on GET("/ping") by Visitor () -> Effect[HttpResult[String]] { Ok("ok") }
  }
}

--------------------------------------------------------------------------------

(source_file
  (context_decl
    (qualified_name
      (identifier))
    (service_decl
      (identifier)
      (service_protocol)
      (handler
        (http_handler
          (http_method)
          (string_literal)
          (by_clause
            (identifier))
          (generic_type_ref
            (builtin_type)
            (generic_type_ref
              (builtin_type)
              (base_type)))
          (block
            (ok_expr
              (string_literal))))))))
