tree-sitter-karn/test/corpus/v0.5.txt
==========================
capability declaration
==========================

context billing {
	capability Logger {
		fn log(message: String) -> ()
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param name: (identifier) type: "String")
        return_type: (unit_type)))))

==========================
provider declaration
==========================

context billing {
	capability Logger {
		fn log(message: String) -> ()
	}

	provides Logger = ConsoleLogger {
		fn log(message: String) -> () { () }
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param name: (identifier) type: "String")
        return_type: (unit_type)))
    (provider_decl
      capability: (identifier)
      provider: (identifier)
      (provider_op
        name: (identifier)
        (param name: (identifier) type: "String")
        return_type: (unit_type)
        body: (block tail: (unit_literal))))))

==========================
service handler with given
==========================

context billing {
	capability Logger {
		fn log(message: String) -> ()
	}

	service Billing {
		on call ping() -> Effect[Bool] given Logger {
			Effect.pure(true)
		}
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name (identifier))
    (capability_decl
      name: (identifier)
      (capability_op
        name: (identifier)
        (param name: (identifier) type: "String")
        return_type: (unit_type)))
    (service_decl
      name: (identifier)
      (handler
        method: (identifier)
        return_type: (generic_type_ref name: (builtin_type) arg: "Bool")
        given: (given_clause capability: (identifier))
        body: (block tail: (effect_pure_expr (boolean_literal)))))))

==========================
agent with state and commit
==========================

context shop {
	agent Cart {
		key id: Int

		state {
			items: Int,
		}

		on call addItem(qty: Int) -> Effect[()] {
			commit { ...self.state, items: self.state.items + qty }
			Effect.pure(())
		}
	}
}

--------------------------

(source_file
  (context_decl
    name: (qualified_name (identifier))
    (agent_decl
      name: (identifier)
      key: (key_decl name: (identifier) type: "Int")
      state: (state_decl
        (record_field name: (identifier) type: "Int"))
      (handler
        method: (identifier)
        (param name: (identifier) type: "Int")
        return_type: (generic_type_ref name: (builtin_type) arg: (unit_type))
        body: (block
          (commit_stmt
            value: (record_spread
              base: (field_access receiver: (self_expr) field: (identifier))
              (field_init name: (identifier) value: (binary_expr (field_access receiver: (field_access receiver: (self_expr) field: (identifier)) field: (identifier)) (identifier)))))
          tail: (effect_pure_expr (unit_literal)))))))
